--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,4 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+
 <my-app>loading</my-app>
